@@ -1,2 +1,2 @@
 noinst_HEADERS = \
-toolkit_common.h  toolkit_crossedit.h  toolkit_random_maps.h  toolkit_server.h  toolkit_socket.h
+toolkit_common.h  toolkit_random_maps.h  toolkit_server.h  toolkit_socket.h
