@@ -1,2 +1,0 @@
-/* toolkit_crossedit.c */
-int blablabla(int bla);
