@@ -1,9 +1,8 @@
 AM_CPPFLAGS = -I$(top_srcdir)/include -I../include -DRESSOURCES=\"$(srcdir)/../../resources\" -DLOGDIR=\"$(top_builddir)/test/logs\" -DSOURCE_ROOT=\"$(srcdir)/../../\"
-noinst_LIBRARIES = libtoolkit_common.a libtoolkit_random_maps.a libtoolkit_socket.a libtoolkit_server.a libtoolkit_crossedit.a
+noinst_LIBRARIES = libtoolkit_common.a libtoolkit_random_maps.a libtoolkit_socket.a libtoolkit_server.a
 
 libtoolkit_common_a_SOURCES = toolkit_common.c
 libtoolkit_random_maps_a_SOURCES = toolkit_random_maps.c
 libtoolkit_socket_a_SOURCES = toolkit_socket.c
 libtoolkit_server_a_SOURCES = toolkit_server.c
-libtoolkit_crossedit_a_SOURCES = toolkit_crossedit.c
 
