@@ -1,9 +1,0 @@
-/* place holder for now, feel free to replace this place holder with something
- * useful, it is there only so that toolkit.a has a bit of content.
- */
-
-#include "../include/toolkit_crossedit.h"
-
-int blablabla(int bla) {
-    return bla;
-}
